Login y servlet organizados y funcionando. Modelo y dao hechos con tablas actualizadas. Base de datos "dataDB20180226.sql "exportada dentro de "./web/Database". Claves foraneas agregadas. Falta el metodo para insertar imagenes en el campo foto.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,14 +42,17 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
-    ${libs.EclipseLink-GlassFish-v3.classpath}
+    ${libs.EclipseLink-GlassFish-v3.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
